# network-ids-project

./: .gitignore  README.md  main.py  pyproject.toml  run.sh  simulate_attack.py
models/: lstm_model.pth  scaler.joblib
src/ml/: evaluate_knn.py  evaluate_lstm.py  knn_model.py  preprocess.py  train_knn.py  train_lstm.py
src/web/: dashboard.py  live_sniffer.py
